# ostrich

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: address_bus.h  cart.h  cpu.h  instructions.h  io.h  ppu.h  registers.h  timer.h
include/cart/: cart.h  constants.h  mbc1.h  mbc3.h  util.h
include/interface/: addressable.h  interrupt_handler.h
src/: address_bus.cpp  cart.cpp  cpu.cpp  io.cpp  ppu.cpp  timer.cpp
src/cart/: cart.cpp  mbc1.cpp  mbc3.cpp
wasm/: Dockerfile  index.html  main.cpp  nginx.conf
